--- a/chart/Chart.yaml
+++ b/chart/Chart.yaml
@@ -28,3 +28,12 @@ dependencies:
   - name: content-deployment
     alias: hana-deployer
     version: ">0.0.0"
+  - name: service-instance
+    alias: auditlog
+    version: ">0.0.0"
+  - name: service-instance
+    alias: attachments
+    version: ">0.0.0"
+  - name: service-instance
+    alias: malware
+    version: ">0.0.0"
