--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -13,6 +13,12 @@ srv:
       serviceInstanceName: hana
     auth:
       serviceInstanceName: xsuaa
+    auditlog:
+      serviceInstanceName: auditlog
+    attachments:
+      serviceInstanceName: attachments
+    malware:
+      serviceInstanceName: malware  
   image:
     repository: incident-management-srv
   resources:
@@ -87,3 +93,12 @@ xsuaa:
     oauth2-configuration:
       redirect-uris:
         - https://*.c-4199fbe.kyma.ondemand.com/**
+auditlog:
+  serviceOfferingName: auditlog
+  servicePlanName: premium
+attachments:
+  serviceOfferingName: objectstore
+  servicePlanName: s3-standard
+malware:
+  serviceOfferingName: malware-scanner
+  servicePlanName: clamav   
